[project]
name = "grpo-rubrics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepspeed>=0.16.3",
    "numpy>=2.2.2",
    "openai>=1.60.1",
    "pandas",
    "peft>=0.14.0",
    "python-dotenv>=1.0.1",
    "trl>=0.13.0",
]

[tool.uv.sources]
trl = { git = "https://github.com/huggingface/trl.git" }
